force-app/main/default/objects/Shipment_Summary__c/Shipment_Summary__c.object-meta.xml
<CustomObject>
    <label>Shipment Summary</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Shipment Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>