force-app/main/default/objects/Shipment_Summary__c/fields/Oracle_Shipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Shipment_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Oracle Shipment ID</description>
    <externalId>true</externalId>
    <label>Oracle Shipment ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>