force-app/main/default/objects/Shipment_Summary__c/fields/Packslip__c.field-meta.xml
<CustomField>
    <fullName>Packslip__c</fullName>
    <inlineHelpText>Packslip for shipment</inlineHelpText>
    <label>Packslip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>