force-app/main/default/objects/Shipment_Summary__c/fields/Waybill_ID__c.field-meta.xml
<CustomField>
    <fullName>Waybill_ID__c</fullName>
    <label>Waybill ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>