force-app/main/default/objects/Shipment_Summary__c/listViews/AllShipments.listView-meta.xml
<ListView>
    <fullName>AllShipments</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Cust_ID__c</columns>
    <columns>Oracle_Shipment_ID__c</columns>
    <columns>Packslip__c</columns>
    <columns>Waybill_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Shipments</label>
    <language>en_US</language>
</ListView>